Fix mesh name wrapping.

--- a/website/include/importerapp.css
+++ b/website/include/importerapp.css
@@ -120,7 +120,8 @@ div.extbutton img
 div.menuitem
 {
 	padding : 2px;
-	text-overflow: ellipsis;
+	text-overflow : ellipsis;
+	white-space : nowrap;
 	overflow : hidden;
 }
 
